Checking in for kaie@netscape.com: Hacky fix to guarantee that HTML messages don't get eaten because of missing </title>. b=195020, r=harishd@netscape.com, sr=peterv@netscape.com